// ============================================================================
// /procurement/invoice-processing-service (版本 2.0)
// 描述: 提供供应商发票的接收、验证、三单匹配及过账功能。
//       字段设计参考核心ERP的 RBKP (发票抬头) 和 RSEG (发票行项目) 表。
// ============================================================================

syntax = "proto3";

package pm.iv.v1;

option go_package = "github.com/enterprise/erp/protos/pm/iv;iv";


import "google/protobuf/timestamp.proto";
import "common/common.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

// ============================================================================
// 服务定义: InvoiceProcessingService
// ============================================================================

service InvoiceProcessingService {

  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_tag) = {
    description: "提供供应商发票的接收、验证、三单匹配及过账功能。"
  };
  // 接收并暂存供应商发票
  rpc ReceiveInvoice(ReceiveInvoiceRequest) returns (ReceiveInvoiceResponse) {

    option (google.api.http) = {

      post: "/api/v1/procurement/receive-invoice"

      body: "*"

    };

  }

  // 对暂存的发票执行三单匹配 (PO-GR-IV)
  rpc MatchInvoice(MatchInvoiceRequest) returns (MatchInvoiceResponse) {


    option (google.api.http) = {


      post: "/api/v1/procurement/match-invoice"


      body: "*"


    };


  }

  // 过账已匹配或无差异的发票
  rpc PostInvoice(PostInvoiceRequest) returns (PostInvoiceResponse) {


    option (google.api.http) = {


      post: "/api/v1/procurement/invoice/post"


      body: "*"


    };


  }

  // 预制发票 (Park) - 暂存但不校验完整性
  rpc ParkInvoice(ParkInvoiceRequest) returns (ParkInvoiceResponse) {


    option (google.api.http) = {


      post: "/api/v1/procurement/invoice/park"


      body: "*"


    };


  }

  // 冲销发票 (Reverse)
  rpc ReverseInvoice(ReverseInvoiceRequest) returns (ReverseInvoiceResponse) {


    option (google.api.http) = {


      post: "/api/v1/procurement/invoice/reverse"


      body: "*"


    };


  }

  // 获取发票详情
  rpc GetInvoice(GetInvoiceRequest) returns (InvoiceDetail) {


    option (google.api.http) = {


      get: "/api/v1/procurement/invoice"


    };


  }

  // 获取发票处理状态 (异步查询)
  rpc GetProcessingStatus(GetProcessingStatusRequest) returns (common.v1.JobInfo) {


    option (google.api.http) = {


      get: "/api/v1/procurement/processing-status"


    };


  }
}

// ============================================================================
// 数据结构: Invoice (发票)
// ============================================================================

// 发票抬头 (参考: RBKP)
message InvoiceHeader {
  // 公司代码 (原: BUKRS)
  string company_code = 1;
  // 发票凭证日期 (原: BLDAT)
  google.protobuf.Timestamp document_date = 2;
  // 过账日期 (原: BUDAT)
  google.protobuf.Timestamp posting_date = 3;
  // 供应商发票号 (原: XBLNR)
  string supplier_invoice_number = 4;
  // 总金额 (含税) (原: RMWWR)
  common.v1.MonetaryValue gross_amount = 5;
  // 税额 (原: WMWST)
  common.v1.MonetaryValue tax_amount = 6;
  // 货币代码 (原: WAERS)
  string currency = 7;
  // 付款条件 (原: ZTERM)
  string payment_terms = 8;
  // 抬头文本 (原: BKTXT)
  string header_text = 9;
}

// 发票行项目 (参考: RSEG)
message InvoiceItem {
  // 发票行项目号 (原: BUZEI)
  int32 item_number = 1;
  // 采购订单号 (原: EBELN)
  string purchase_order_number = 2;
  // 采购订单行项目 (原: EBELP)
  int32 purchase_order_item = 3;
  // 物料编号 (原: MATNR)
  string material = 4;
  // 短文本 (原: TXZ01)
  string short_text = 5;
  // 发票数量 (原: MENGE)
  common.v1.QuantityValue quantity = 6;
  // 单位 (原: MEINS)
  string unit = 7;
  // 金额 (原: WRBTR)
  common.v1.MonetaryValue amount = 8;
  // 税码 (原: MWSKZ)
  string tax_code = 9;
  // 收货凭证 (原: LFBNR)
  string goods_receipt_document = 10;
  // 收货凭证年度 (原: LFGJA)
  int32 goods_receipt_year = 11;
  // 收货凭证行项目 (原: LFPOS)
  int32 goods_receipt_item = 12;
}

// 完整的发票详情
message InvoiceDetail {
  // 内部发票ID
  string internal_invoice_id = 1;
  // 核心ERP系统中的发票凭证引用 (过账后生成)
  common.v1.SystemDocumentReference document_reference = 2;
  // 发票处理状态
  InvoiceProcessingStatus status = 3;
  // 发票抬头
  InvoiceHeader header = 4;
  // 发票行项目
  repeated InvoiceItem items = 5;
}

enum InvoiceProcessingStatus {
  INVOICE_PROCESSING_STATUS_UNSPECIFIED = 0;
  // 已接收，待处理
  RECEIVED = 1;
  // 匹配中
  MATCHING = 2;
  // 匹配成功
  MATCH_SUCCESS = 3;
  // 匹配失败，存在差异
  MATCH_FAILURE = 4;
  // 已过账
  POSTED = 5;
  // 已冻结/暂存
  PARKED = 6;
  // 已取消
  CANCELLED = 7;
  // 已冲销
  REVERSED = 8;
}

// ============================================================================
// RPC 消息定义
// ============================================================================

// 接收发票请求
message ReceiveInvoiceRequest {
  // 发票抬头
  InvoiceHeader header = 1;
  // 发票行项目
  repeated InvoiceItem items = 2;
  // 发票原始文件 (例如 PDF, XML)
  bytes raw_document = 3;
  // 原始文件格式
  string document_format = 4;
  // 请求上下文
  common.v1.RequestContext context = 99;
}

// 接收发票响应
message ReceiveInvoiceResponse {
  // 内部生成的唯一发票ID
  string internal_invoice_id = 1;
  // 当前状态
  InvoiceProcessingStatus status = 2;
  // 异步处理作业ID (如果启用异步处理)
  string job_id = 3;
}

// 匹配发票请求
message MatchInvoiceRequest {
  // 内部发票ID
  string internal_invoice_id = 1;
  // 请求上下文
  common.v1.RequestContext context = 99;
}

// 匹配发票响应
message MatchInvoiceResponse {
  // 内部发票ID
  string internal_invoice_id = 1;
  // 匹配状态
  MatchStatus match_status = 2;
  // 匹配差异列表
  repeated MatchVariance variances = 3;
}

enum MatchStatus {
  MATCH_STATUS_UNSPECIFIED = 0;
  // 匹配成功
  SUCCESS = 1;
  // 价格差异
  PRICE_VARIANCE = 2;
  // 数量差异
  QUANTITY_VARIANCE = 3;
  // 缺少收货记录
  MISSING_GOODS_RECEIPT = 4;
}

// 匹配差异详情
message MatchVariance {
  // 采购订单行项目
  int32 purchase_order_item = 1;
  // 差异类型
  string variance_type = 2;
  // 采购订单值 (价格或数量)
  string po_value = 3;
  // 收货值 (数量)
  string gr_value = 4;
  // 发票值 (价格或数量)
  string invoice_value = 5;
}

// 过账发票请求
message PostInvoiceRequest {
  // 内部发票ID
  string internal_invoice_id = 1;
  // 过账日期
  google.protobuf.Timestamp posting_date = 2;
  // 如果存在差异，是否接受差异并过账
  bool accept_variances = 3;
  // 请求上下文
  common.v1.RequestContext context = 99;
}

// 过账发票响应
message PostInvoiceResponse {
  // 操作是否成功
  bool success = 1;
  // 生成的发票凭证引用
  common.v1.SystemDocumentReference document_reference = 2;
  // 从核心ERP返回的消息列表
  repeated common.v1.ApiMessage messages = 3;
}

// 预制发票请求
message ParkInvoiceRequest {
  // 发票抬头
  InvoiceHeader header = 1;
  // 发票行项目
  repeated InvoiceItem items = 2;
  // 请求上下文
  common.v1.RequestContext context = 99;
}

// 预制发票响应
message ParkInvoiceResponse {
  string internal_invoice_id = 1;
  InvoiceProcessingStatus status = 2;
  repeated common.v1.ApiMessage messages = 3;
}

// 冲销发票请求
message ReverseInvoiceRequest {
  // 内部发票ID
  string internal_invoice_id = 1;
  // 冲销原因
  string reversal_reason = 2;
  // 冲销日期
  google.protobuf.Timestamp reversal_date = 3;
  // 请求上下文
  common.v1.RequestContext context = 99;
}

// 冲销发票响应
message ReverseInvoiceResponse {
  bool success = 1;
  common.v1.SystemDocumentReference reversal_document = 2;
  repeated common.v1.ApiMessage messages = 3;
}

// 获取发票请求
message GetInvoiceRequest {
  oneof identifier {
    // 内部发票ID
    string internal_invoice_id = 1;
    // 核心ERP系统中的发票凭证引用
    common.v1.SystemDocumentReference document_reference = 2;
  }
  // 请求上下文
  common.v1.RequestContext context = 99;
}

// 获取处理状态请求
message GetProcessingStatusRequest {
  string job_id = 1;
  // 请求上下文
  common.v1.RequestContext context = 99;
}
