//! AR/AP Service - Extended gRPC Methods (Tier 2 & 3)
//!
//! Stub implementations for remaining 25 methods

use tonic::{Request, Response, Status};
use crate::proto::finance::arap::*;

/// Stub implementations for Tier 2 & 3 methods
/// These return placeholder responses to enable compilation
pub trait ExtendedArApMethods {
    // Master Data (2 methods)
    async fn batch_get_partner_details(
        &self,
        request: Request<BatchGetPartnerDetailsRequest>,
    ) -> Result<Response<BatchGetPartnerDetailsResponse>, Status> {
        Ok(Response::new(BatchGetPartnerDetailsResponse {
            partners: vec![],
            ..Default::default()
        }))
    }
    
    async fn update_supplier(
        &self,
        request: Request<UpdateSupplierRequest>,
    ) -> Result<Response<UpdateSupplierResponse>, Status> {
        let req = request.into_inner();
        Ok(Response::new(UpdateSupplierResponse {
            supplier_id: req.supplier_id,
            success: true,
            message: "Supplier updated successfully".to_string(),
            ..Default::default()
        }))
    }
    
    // Open Items & Analysis (5 methods)
    async fn get_aging_analysis(
        &self,
        request: Request<GetAgingAnalysisRequest>,
    ) -> Result<Response<GetAgingAnalysisResponse>, Status> {
        Ok(Response::new(GetAgingAnalysisResponse {
            current_amount: 0.0,
            days_1_30: 0.0,
            days_31_60: 0.0,
            days_61_90: 0.0,
            over_90_days: 0.0,
            ..Default::default()
        }))
    }
    
    async fn generate_statement(
        &self,
        request: Request<GenerateStatementRequest>,
    ) -> Result<Response<GenerateStatementResponse>, Status> {
        Ok(Response::new(GenerateStatementResponse {
            statement_id: uuid::Uuid::new_v4().to_string(),
            success: true,
            ..Default::default()
        }))
    }
    
    async fn get_dunning_history(
        &self,
        request: Request<GetDunningHistoryRequest>,
    ) -> Result<Response<GetDunningHistoryResponse>, Status> {
        Ok(Response::new(GetDunningHistoryResponse {
            dunning_runs: vec![],
            ..Default::default()
        }))
    }
    
    async fn trigger_dunning(
        &self,
        request: Request<TriggerDunningRequest>,
    ) -> Result<Response<TriggerDunningResponse>, Status> {
        Ok(Response::new(TriggerDunningResponse {
            dunning_id: uuid::Uuid::new_v4().to_string(),
            success: true,
            message: "Dunning triggered".to_string(),
            ..Default::default()
        }))
    }
    
    async fn get_credit_limit(
        &self,
        request: Request<GetCreditLimitRequest>,
    ) -> Result<Response<GetCreditLimitResponse>, Status> {
        Ok(Response::new(GetCreditLimitResponse {
            credit_limit: 1000000.0,
            currency: "CNY".to_string(),
            ..Default::default()
        }))
    }
    
    // Clearing (4 methods)
    async fn reverse_clearing(
        &self,
        request: Request<ReverseClearingRequest>,
    ) -> Result<Response<ReverseClearingResponse>, Status> {
        Ok(Response::new(ReverseClearingResponse {
            reversal_document: format!("REV-{}", chrono::Utc::now().timestamp()),
            success: true,
            ..Default::default()
        }))
    }
    
    async fn get_clearing_document(
        &self,
        request: Request<GetClearingDocumentRequest>,
    ) -> Result<Response<GetClearingDocumentResponse>, Status> {
        Ok(Response::new(GetClearingDocumentResponse {
            ..Default::default()
        }))
    }
    
    async fn auto_clear_open_items(
        &self,
        request: Request<AutoClearOpenItemsRequest>,
    ) -> Result<Response<AutoClearOpenItemsResponse>, Status> {
        Ok(Response::new(AutoClearOpenItemsResponse {
            success: true,
            cleared_count: 0,
            ..Default::default()
        }))
    }
    
    async fn list_clearing_candidates(
        &self,
        request: Request<ListClearingCandidatesRequest>,
    ) -> Result<Response<ListClearingCandidatesResponse>, Status> {
        Ok(Response::new(ListClearingCandidatesResponse {
            candidates: vec![],
            ..Default::default()
        }))
    }
    
    // Payment Management (6 methods)
    async fn approve_payment_proposal(
        &self,
        request: Request<ApprovePaymentProposalRequest>,
    ) -> Result<Response<ApprovePaymentProposalResponse>, Status> {
        Ok(Response::new(ApprovePaymentProposalResponse {
            success: true,
            ..Default::default()
        }))
    }
    
    async fn execute_payment_run(
        &self,
        request: Request<ExecutePaymentRunRequest>,
    ) -> Result<Response<ExecutePaymentRunResponse>, Status> {
        Ok(Response::new(ExecutePaymentRunResponse {
            run_id: uuid::Uuid::new_v4().to_string(),
            success: true,
            ..Default::default()
        }))
    }
    
    async fn get_payment_proposal_details(
        &self,
        request: Request<GetPaymentProposalDetailsRequest>,
    ) -> Result<Response<GetPaymentProposalDetailsResponse>, Status> {
        Ok(Response::new(GetPaymentProposalDetailsResponse {
            ..Default::default()
        }))
    }
    
    async fn cancel_payment_proposal(
        &self,
        request: Request<CancelPaymentProposalRequest>,
    ) -> Result<Response<CancelPaymentProposalResponse>, Status> {
        Ok(Response::new(CancelPaymentProposalResponse {
            success: true,
            ..Default::default()
        }))
    }
    
    async fn get_payment_run_status(
        &self,
        request: Request<GetPaymentRunStatusRequest>,
    ) -> Result<Response<GetPaymentRunStatusResponse>, Status> {
        Ok(Response::new(GetPaymentRunStatusResponse {
            status: "COMPLETED".to_string(),
            ..Default::default()
        }))
    }
    
    async fn list_payment_runs(
        &self,
        request: Request<ListPaymentRunsRequest>,
    ) -> Result<Response<ListPaymentRunsResponse>, Status> {
        Ok(Response::new(ListPaymentRunsResponse {
            payment_runs: vec![],
            ..Default::default()
        }))
    }
    
    // Advanced Features (8 methods)
    async fn post_advance_payment(
        &self,
        request: Request<PostAdvancePaymentRequest>,
    ) -> Result<Response<PostAdvancePaymentResponse>, Status> {
        Ok(Response::new(PostAdvancePaymentResponse {
            advance_id: uuid::Uuid::new_v4().to_string(),
            success: true,
            ..Default::default()
        }))
    }
    
    async fn apply_advance_payment(
        &self,
        request: Request<ApplyAdvancePaymentRequest>,
    ) -> Result<Response<ApplyAdvancePaymentResponse>, Status> {
        Ok(Response::new(ApplyAdvancePaymentResponse {
            success: true,
            ..Default::default()
        }))
    }
    
    async fn post_invoice(
        &self,
        request: Request<PostInvoiceRequest>,
    ) -> Result<Response<PostInvoiceResponse>, Status> {
        Ok(Response::new(PostInvoiceResponse {
            invoice_id: uuid::Uuid::new_v4().to_string(),
            success: true,
            ..Default::default()
        }))
    }
    
    async fn reverse_invoice(
        &self,
        request: Request<ReverseInvoiceRequest>,
    ) -> Result<Response<ReverseInvoiceResponse>, Status> {
        Ok(Response::new(ReverseInvoiceResponse {
            reversal_document: format!("INV-REV-{}", chrono::Utc::now().timestamp()),
            success: true,
            ..Default::default()
        }))
    }
    
    async fn validate_invoice(
        &self,
        request: Request<ValidateInvoiceRequest>,
    ) -> Result<Response<ValidateInvoiceResponse>, Status> {
        Ok(Response::new(ValidateInvoiceResponse {
            is_valid: true,
            ..Default::default()
        }))
    }
    
    async fn list_bank_accounts(
        &self,
        request: Request<ListBankAccountsRequest>,
    ) -> Result<Response<ListBankAccountsResponse>, Status> {
        Ok(Response::new(ListBankAccountsResponse {
            bank_accounts: vec![],
            ..Default::default()
        }))
    }
    
    async fn get_dso_metrics(
        &self,
        request: Request<GetDsoMetricsRequest>,
    ) -> Result<Response<GetDsoMetricsResponse>, Status> {
        Ok(Response::new(GetDsoMetricsResponse {
            dso_days: 0.0,
            ..Default::default()
        }))
    }
    
    async fn export_to_excel(
        &self,
        request: Request<ExportToExcelRequest>,
    ) -> Result<Response<ExportToExcelResponse>, Status> {
        Ok(Response::new(ExportToExcelResponse {
            file_url: "https://example.com/export.xlsx".to_string(),
            success: true,
            ..Default::default()
        }))
    }
}
